--- a/build.gradle
+++ b/build.gradle
@@ -8,21 +8,28 @@ buildscript {
 }
 
 apply plugin: 'java'
+apply plugin: 'war'
+apply plugin: 'application'
+apply plugin: 'checkstyle'
+apply plugin: 'findbugs'
+apply plugin: 'pmd'
 apply plugin: 'eclipse'
+apply plugin: 'eclipse-wtp'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 
 defaultTasks "clean", "build"
 
 sourceCompatibility = targetCompatibility  = 1.8
-[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+def defaultEncoding = 'UTF-8'
+tasks.withType(AbstractCompile)*.options*.encoding = defaultEncoding
+tasks.withType(GroovyCompile)*.groovyOptions*.encoding = defaultEncoding
 
+mainClassName = 'jp.takumon.japaneseaddresssearcher.App'
 repositories {
     mavenCentral()
-    maven {
-        url "https://repository.jboss.org/nexus/content/repositories/releases"
-        url 'https://oss.sonatype.org/content/repositories/snapshots' 
-    }
+    maven { url "https://repository.jboss.org/nexus/content/repositories/releases"}
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 
 jar {
@@ -30,7 +37,10 @@ jar {
     version =  '0.1.0'
 }
 
+
 dependencies {
+    //compile group: "commons-cli", name: "commons-cli", version: "1.3.1"
+    
     compile group: "org.webjars", name: "jquery", version: "2.2.4"
     compile group: "org.webjars.bower", name: "bootstrap", version: "3.3.7"
     compile group: 'org.webjars', name: 'webjars-locator', version: '0.32'
@@ -47,12 +57,10 @@ dependencies {
     compile group: 'org.springframework.boot', name:'spring-boot-starter-aop', version:'1.5.2.RELEASE'
     compile group: 'org.springframework.boot', name:'spring-boot-starter-thymeleaf', version:'1.5.2.RELEASE'
     compile group: 'org.seasar.doma.boot', name: 'doma-spring-boot-starter', version: '1.1.0'
-
+    
     testCompile group: 'org.springframework.boot', name:'spring-boot-starter-test', version:'1.5.2.RELEASE'
     testCompile group: 'org.springframework.boot', name:'spring-boot-test-autoconfigure', version:'1.5.2.RELEASE'
 	testCompile group: 'org.seleniumhq.selenium', name: 'selenium-api', version: '3.3.1'
-    
-
 }
 
 
@@ -63,3 +71,43 @@ task wrapper (type: Wrapper) {
 // Doma設定 コンパイル前にSQLファイルをビルド先に移動する
 processResources.destinationDir = compileJava.destinationDir
 compileJava.dependsOn processResources
+
+
+checkstyle {
+    toolVersion = '6.7'
+}
+
+findbugs {
+  toolVersion = "3.0.1"
+}
+
+
+run {
+  standardInput = System.in
+}
+
+
+
+import java.util.concurrent.Callable
+
+task hoge {
+  doLast {
+    //copy(encoding: 'UTF-8') {
+    //  String targetName = 'SimpleBean'
+    //  from 'src/dist/doc/template'
+    //  into 'src/dist/doc/output'
+    //  expand packageName: 'com.example.bean', className: 'targetName', fields:['String': 'name', 'int':'value']
+    //  
+    //  rename 'template.java', "${targetName}.java"
+    //}
+    logger.error 'エラーメッセージ'
+    logger.quiet '重要なメッセージ'
+    logger.warn '警告メッセージ'
+    logger.lifecycle 'ビルド時の進行状況を表すメッセージ'
+    logger.info 'インフォメーションメッセージ'
+    logger.debug 'デバッグメッセージ'
+    delete 'src/dist/doc/output'
+    
+    println System.properties['message']
+  }
+}
