checkstyleのレポートはxmlとhtml両方出力するようにした

--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,13 @@ checkstyle {
     toolVersion = '7.6.1'
 }
 
+tasks.withType(Checkstyle) {
+    reports {
+        xml.enabled true
+        html.enabled true
+    }
+}
+
 findbugs {
     ignoreFailures = true
     sourceSets = [sourceSets.main]
