--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,10 @@
 spring:
+    profiles:
+        active: development
+---
+# 開発環境(インメモリDBを使用)の設定
+spring:
+    profiles: development
     thymeleaf.cache: false #開発中はキャシュしない
     datasource:
         driverClassName: org.h2.Driver
@@ -10,7 +16,52 @@ spring:
       restart:
         enabled: true
 doma:
-    dialect: h2
+    dialect: H2
+    naming: SNAKE_LOWER_CASE
+    sql-file-repository: NO_CACHE
+#検索条件のプロパティ
+search:
+    offset: 0
+    limit: 500
+
+---
+# 開発環境（ローカルのMySQLを使用）の設定
+spring:
+    profiles: development_local_mysql
+    thymeleaf.cache: false #開発中はキャシュしない
+    datasource:
+        driverClassName: com.mysql.jdbc.Driver
+        url: jdbc:mysql://localhost:3306/ADDRESS_SEARCH
+        username: pgtop
+        password: 12345
+        initialize: false #データはDataBaseにあらかじめセットしているためdata.sqlを読み込まない
+    devtools:
+      restart:
+        enabled: true
+doma:
+    dialect: MYSQL
+    naming: SNAKE_LOWER_CASE
+    sql-file-repository: NO_CACHE
+#検索条件のプロパティ
+search:
+    offset: 0
+    limit: 500
+---
+# 本番環境の設定
+spring:
+    profiles: production
+    thymeleaf.cache: true
+    datasource:
+        driverClassName: com.mysql.jdbc.Driver
+        url: jdbc:mysql://testdb.cxjycaurv1vp.us-west-2.rds.amazonaws.com:3306/ADDRESS_SEARCH
+        username: pgtop
+        password: 12345
+        initialize: false #データはDataBaseにあらかじめセットしているためdata.sqlを読み込まない
+    devtools:
+      restart:
+        enabled: true
+doma:
+    dialect: MYSQL
     naming: SNAKE_LOWER_CASE
     sql-file-repository: NO_CACHE
 #検索条件のプロパティ
