--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,10 @@ dependencies {
     testCompile group: 'org.springframework.boot', name:'spring-boot-starter-test', version:springBootVersion
     testCompile group: 'org.springframework.boot', name:'spring-boot-test-autoconfigure', version:springBootVersion
     testCompile group: 'org.seleniumhq.selenium', name: 'selenium-api', version: '3.3.1'
+
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.6.1'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.6.1'
+    compile group: 'com.google.guava', name: 'guava', version: '21.0'
 }
 
 jar {
