Spring Boot Actuatorドキュメントを依存ライブラリに追加

--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     
     compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: springBootVersion
     compile group: "org.springframework.boot", name: "spring-boot-starter-actuator", version: springBootVersion
+    compile group: 'org.springframework.boot', name: 'spring-boot-actuator-docs', version: springBootVersion
+    
     compile group: 'org.springframework.boot', name:'spring-boot-starter-jdbc', version:springBootVersion
     compile group: 'org.springframework.boot', name:'spring-boot-starter-aop', version:springBootVersion
     compile group: 'org.springframework.boot', name:'spring-boot-starter-thymeleaf', version:springBootVersion
