HtmlUnitのテストを追加した。

--- a/build.gradle
+++ b/build.gradle
@@ -48,37 +48,44 @@ repositories {
 
 dependencies {
     def springBootVersion = '1.5.2.RELEASE'
+    
+    // クライアント関連
     compile group: "org.webjars", name: "jquery", version: "2.2.4"
     compile group: "org.webjars.bower", name: "bootstrap", version: "3.3.7"
     compile group: 'org.webjars', name: 'webjars-locator', version: '0.32'
     
-    
-    compile group: 'org.lazyluke', name:'log4jdbc-remix', version:'0.2.7'
-    compile(group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion)
-    
+
+    // Spring関連
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
     compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: springBootVersion
     compile group: "org.springframework.boot", name: "spring-boot-starter-actuator", version: springBootVersion
     compile group: 'org.springframework.boot', name: 'spring-boot-actuator-docs', version: springBootVersion
     compile group: 'am.ik.beansviz', name: 'beansviz-spring-boot-actuator', version: '0.1.0'
-    
-    
     compile group: 'org.springframework.boot', name:'spring-boot-starter-jdbc', version:springBootVersion
     compile group: 'org.springframework.boot', name:'spring-boot-starter-aop', version:springBootVersion
     compile group: 'org.springframework.boot', name:'spring-boot-starter-thymeleaf', version:springBootVersion
     compile group: 'org.seasar.doma.boot', name: 'doma-spring-boot-starter', version: '1.1.0'
 
+    // DBとWebサーバ関連
     // 開発中はH2と組み込みTomcat、運用中はMySQL,既存のTomcatを使う
     providedRuntime 'com.h2database:h2:1.4.187'
     providedRuntime "org.springframework.boot:spring-boot-starter-tomcat"
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.40'
     
+	// ドキュメント関連
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.6.1'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.6.1'
+    
+    // その他
+    compile group: 'com.google.guava', name: 'guava', version: '21.0'
+    compile group: 'org.lazyluke', name:'log4jdbc-remix', version:'0.2.7'
+    
+    // テスト関連
     testCompile group: 'org.springframework.boot', name:'spring-boot-starter-test', version:springBootVersion
     testCompile group: 'org.springframework.boot', name:'spring-boot-test-autoconfigure', version:springBootVersion
     testCompile group: 'org.seleniumhq.selenium', name: 'selenium-api', version: '3.3.1'
-
-    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.6.1'
-    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.6.1'
-    compile group: 'com.google.guava', name: 'guava', version: '21.0'
+    testCompile group: 'net.sourceforge.htmlunit', name: 'htmlunit', version: '2.23'
+    testCompile group: 'org.seleniumhq.selenium', name: 'htmlunit-driver', version: '2.23'
 }
 
 jar {
