--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,9 @@ spring:
         username: sa
         password:
         sql-script-encoding: UTF-8
+    h2:
+      console:
+        enabled: true
     devtools:
       restart:
         enabled: true
@@ -62,4 +65,3 @@ spring:
         enabled: true
 doma:
     dialect: MYSQL
-    
